syntax = "proto3";

package bridge.v1;

message BridgeEvents {
  repeated BridgeEvent events = 1;
}

message BridgeEvent {
  string id = 1;
  string transaction_hash = 2;
  uint64 block_number = 3;
  string block_hash = 4;
  uint64 timestamp = 5;
  string bridge_protocol = 6; // layerzero, wormhole, etc.
  string event_type = 7; // send, receive
  string source_chain = 8;
  string destination_chain = 9;
  string sender_address = 10;
  string receiver_address = 11;
  string token_address = 12;
  string token_id = 13; // for NFTs
  string amount = 14; // for fungible tokens
  string fee = 15;
  uint64 nonce = 16;
  string message_hash = 17;
}
