syntax = "proto3";

package nft.v1;

message NFTEvents {
  repeated NFTMintEvent mint_events = 1;
  repeated NFTTransferEvent transfer_events = 2;
  repeated NFTBurnEvent burn_events = 3;
  repeated CompressedTokenEvent compressed_events = 4;
}

message NFTMintEvent {
  string transaction_hash = 1;
  string block_hash = 2;
  uint64 block_number = 3;
  string block_timestamp = 4;
  string mint_authority = 5;
  string token_address = 6;
  string recipient = 7;
  string token_name = 8;
  string token_symbol = 9;
  string token_uri = 10;
  uint32 decimals = 11;
  uint64 amount = 12;
  bool is_compressed = 13;
  optional string collection = 14;
  map<string, string> attributes = 15;
}

message NFTTransferEvent {
  string transaction_hash = 1;
  string block_hash = 2;
  uint64 block_number = 3;
  string block_timestamp = 4;
  string token_address = 5;
  string from_address = 6;
  string to_address = 7;
  uint64 amount = 8;
  bool is_compressed = 9;
  optional string collection = 10;
}

message NFTBurnEvent {
  string transaction_hash = 1;
  string block_hash = 2;
  uint64 block_number = 3;
  string block_timestamp = 4;
  string token_address = 5;
  string owner = 6;
  uint64 amount = 7;
  bool is_compressed = 8;
  optional string collection = 9;
}

message CompressedTokenEvent {
  string transaction_hash = 1;
  string block_hash = 2;
  uint64 block_number = 3;
  string block_timestamp = 4;
  string operation = 5; // "create", "mint", "transfer", "burn", etc.
  string token_address = 6;
  optional string from_address = 7;
  optional string to_address = 8;
  uint64 amount = 9;
  string tree_address = 10; // State tree public key
  optional string collection = 11;
}

message NFTActivity {
  string id = 1; // composite key of token_address + transaction_hash
  string activity_type = 2; // "mint", "transfer", "burn", "compress"
  string transaction_hash = 3;
  uint64 block_number = 4;
  string block_timestamp = 5;
  string token_address = 6;
  optional string from_address = 7;
  optional string to_address = 8;
  optional uint64 amount = 9;
  bool is_compressed = 10;
  optional string collection = 11;
  optional string token_name = 12;
  optional string token_symbol = 13;
  optional string token_uri = 14;
  map<string, string> attributes = 15;
}
